[package]
name = "fret-examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[features]
alloc-profile = []
mathjax-svg = ["fret-markdown/mathjax-svg"]
hotpatch = ["fret-launch/hotpatch-subsecond", "fret-bootstrap/hotpatch-subsecond"]
# Forward `fret-launch` experimental macOS passthrough-regions implementation.
macos-hit-test-regions = ["fret-launch/macos-hit-test-regions"]
# Node-graph demos are split so the default path stays declarative-first (no retained bridge).
node-graph-demos = []
node-graph-demos-legacy = ["node-graph-demos", "fret-node/imui"]
devtools-ws = ["fret-bootstrap/diagnostics-ws"]

[dependencies]
anyhow.workspace = true
fret-icons = { path = "../../ecosystem/fret-icons" }
fret-icons-lucide = { path = "../../ecosystem/fret-icons-lucide" }
fret-bootstrap = { path = "../../ecosystem/fret-bootstrap", features = ["preload-icon-svgs", "icons-lucide", "icons-ui-semantic-lucide", "ui-app-driver", "ui-app-command-palette", "ui-assets", "diagnostics", "diagnostics-canvas"] }
fret-ui-assets = { path = "../../ecosystem/fret-ui-assets" }
fret-docking = { path = "../../ecosystem/fret-docking", features = ["imui"] }
fret-ui-shadcn = { path = "../../ecosystem/fret-ui-shadcn", features = ["state-query"] }
fret-ui-kit = { path = "../../ecosystem/fret-ui-kit", features = ["imui"] }
fret-ui-editor = { path = "../../ecosystem/fret-ui-editor", features = ["imui"] }
fret-imui = { path = "../../ecosystem/fret-imui" }
fret-workspace = { path = "../../ecosystem/fret-workspace" }
fret-plot = { path = "../../ecosystem/fret-plot" }
fret-plot3d = { path = "../../ecosystem/fret-plot3d" }
fret-chart = { path = "../../ecosystem/fret-chart", features = ["echarts"] }
fret-gizmo = { path = "../../ecosystem/fret-gizmo" }
fret-undo = { path = "../../ecosystem/fret-undo" }
delinea = { path = "../../ecosystem/delinea" }
fret-core = { path = "../../crates/fret-core" }
fret-fonts = { path = "../../crates/fret-fonts" }
fret-runtime = { path = "../../crates/fret-runtime" }
fret-render = { path = "../../crates/fret-render" }
fret-app = { path = "../../crates/fret-app" }
fret-ui-app = { path = "../../crates/fret-ui-app" }
fret-ui = { path = "../../crates/fret-ui", features = ["compat-retained-widgets"] }
fret-markdown = { path = "../../ecosystem/fret-markdown" }
fret-node = { path = "../../ecosystem/fret-node" }
fret-editor = { path = "../fret-editor" }
fret-executor = { path = "../../ecosystem/fret-executor" }
fret-query = { path = "../../ecosystem/fret-query", features = ["ui"] }
fret-router = { path = "../../ecosystem/fret-router", features = ["query-integration"] }
fret-router-ui = { path = "../../ecosystem/fret-router-ui" }
fret-selector = { path = "../../ecosystem/fret-selector", features = ["ui"] }
fret-genui-core = { path = "../../ecosystem/fret-genui-core" }
fret-genui-shadcn = { path = "../../ecosystem/fret-genui-shadcn" }
bytemuck.workspace = true
glam.workspace = true
serde_json.workspace = true
slotmap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
winit.workspace = true
wgpu.workspace = true
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fret = { path = "../../ecosystem/fret", features = ["devloop", "state", "ui-assets", "diagnostics", "docking", "editor"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "time"] }
ureq.workspace = true
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
fret-launch = { path = "../../crates/fret-launch", features = ["dev-state", "diag-screenshots"] }
fret-markdown = { path = "../../ecosystem/fret-markdown", features = ["syntax-rust"] }
fret-code-view = { path = "../../ecosystem/fret-code-view" }

[target.'cfg(all(not(target_arch = "wasm32"), target_os = "windows"))'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D11on12",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_MediaFoundation",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-metal.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
fret = { path = "../../ecosystem/fret", default-features = false, features = ["app", "state"] }
fret-launch = { path = "../../crates/fret-launch" }
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "Performance",
    "Window",
] }
js-sys = "0.3"
wasm-bindgen = "0.2"

[dev-dependencies]
naga.workspace = true

[lints.rust]
dead_code = "allow"
unused = "allow"
unused_variables = "allow"

[lints.clippy]
all = "allow"
