[package]
name = "fret-imui-wasm-smoke"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[dependencies]
fret-authoring = { path = "../../ecosystem/fret-authoring" }
fret-imui = { path = "../../ecosystem/fret-imui" }
fret-ui = { path = "../../crates/fret-ui" }

