[package]
name = "fret-renderdoc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
renderdog-automation.workspace = true
serde.workspace = true
serde_json.workspace = true
