[package]
name = "fret-svg-atlas-stress"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
fret-app = { path = "../../crates/fret-app" }
fret-core = { path = "../../crates/fret-core" }
fret-runtime = { path = "../../crates/fret-runtime" }
fret-render = { path = "../../crates/fret-render" }
fret-runner-winit-wgpu = { path = "../../crates/fret-runner-winit-wgpu" }
pollster.workspace = true
tracing-subscriber.workspace = true
wgpu.workspace = true
winit.workspace = true
