[package]
name = "fret-svg-atlas-stress"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
fret-app = { path = "../../crates/fret-app" }
fret-core = { path = "../../crates/fret-core" }
fret-runtime = { path = "../../crates/fret-runtime" }
fret-render = { path = "../../crates/fret-render" }
fret-launch = { path = "../../crates/fret-launch" }
pollster.workspace = true
tracing-subscriber.workspace = true
wgpu.workspace = true
winit.workspace = true
