[package]
name = "fret-ui-gallery-mobile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
fret-ui-gallery = { path = "../fret-ui-gallery" }
winit.workspace = true

[package.metadata.android]
package = "dev.fret.ui_gallery"
apk_name = "fret-ui-gallery"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 34

[package.metadata.android.application]
label = "Fret UI Gallery"
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
