[package]
name = "fret-ui-gallery-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[features]
default = ["cjk-lite-fonts"]
emoji-fonts = ["fret-launch/wasm-emoji-fonts"]
cjk-lite-fonts = ["fret-launch/wasm-cjk-lite-fonts"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
fret-launch = { path = "../../crates/fret-launch" }
fret-ui-gallery = { path = "../fret-ui-gallery" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window"] }
