[package]
name = "fret-ui-gallery-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[features]
default = ["cjk-lite-fonts", "devtools-ws"]
emoji-fonts = ["fret-launch/wasm-emoji-fonts"]
cjk-lite-fonts = ["fret-launch/wasm-cjk-lite-fonts"]
devtools-ws = ["fret-ui-gallery/devtools-ws"]
gallery-web-ime-harness = ["fret-ui-gallery/gallery-web-ime-harness"]
gallery-dev = ["fret-ui-gallery/gallery-dev"]
gallery-material3 = ["fret-ui-gallery/gallery-material3"]
gallery-full = ["fret-ui-gallery/gallery-full"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
fret-app = { path = "../../crates/fret-app" }
fret-bootstrap = { path = "../../ecosystem/fret-bootstrap" }
fret-launch = { path = "../../crates/fret-launch" }
fret-ui-gallery = { path = "../fret-ui-gallery", features = ["devtools-ws"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window"] }
