[package]
name = "fret-ui-gallery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false
default-run = "fret-ui-gallery"

[dependencies]
anyhow.workspace = true
fret-app = { path = "../../crates/fret-app" }
fret-core = { path = "../../crates/fret-core" }
fret-runtime = { path = "../../crates/fret-runtime" }
fret-launch = { path = "../../crates/fret-launch" }
fret-ui = { path = "../../crates/fret-ui", features = ["diagnostics"] }
fret-ui-kit = { path = "../../ecosystem/fret-ui-kit" }
fret-ui-shadcn = { path = "../../ecosystem/fret-ui-shadcn" }
fret-ui-material3 = { path = "../../ecosystem/fret-ui-material3" }
fret-icons = { path = "../../ecosystem/fret-icons" }
fret-code-view = { path = "../../ecosystem/fret-code-view" }
fret-markdown = { path = "../../ecosystem/fret-markdown", features = ["syntax-all"] }
fret-workspace = { path = "../../ecosystem/fret-workspace" }
fret-kit = { path = "../../ecosystem/fret-kit" }
fret-ui-headless = { path = "../../ecosystem/fret-ui-headless" }
fret-bootstrap = { path = "../../ecosystem/fret-bootstrap", features = ["preload-icon-svgs", "icons-lucide", "diagnostics", "ui-app-driver"] }
fret-undo = { path = "../../ecosystem/fret-undo" }
delinea = { path = "../../ecosystem/delinea" }
fret-chart = { path = "../../ecosystem/fret-chart" }
fret-canvas = { path = "../../ecosystem/fret-canvas", features = ["ui"] }
time.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
winit.workspace = true

[dev-dependencies]
fret-render = { path = "../../crates/fret-render" }
pollster.workspace = true
slotmap.workspace = true
stacksafe.workspace = true
wgpu.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Location"] }
