[package]
name = "fret-ui-gallery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false
default-run = "fret-ui-gallery"

[features]
default = []
devtools-ws = ["fret-bootstrap/diagnostics-ws"]
gallery-ai = ["dep:fret-ui-ai"]
gallery-web-ime-harness = ["fret-fonts/emoji"]
gallery-chart = [
    "dep:fret-chart",
    "dep:delinea",
]
gallery-dev = [
    "gallery-ai",
    "gallery-chart",
    "fret/ui-ai",
    "gallery-web-ime-harness",
    "dep:fret-ui-magic",
    "dep:fret-code-editor-view",
    "dep:fret-canvas",
    "dep:fret-node",
    "dep:fret-markdown",
    "dep:fret-code-view",
    "dep:fret-code-editor",
]
gallery-material3 = ["dep:fret-ui-material3"]
gallery-full = ["gallery-dev", "gallery-material3"]
webview-wry = ["gallery-dev", "fret-launch/webview-wry", "fret-ui-ai/webview"]

[dependencies]
anyhow.workspace = true
fret-app = { path = "../../crates/fret-app" }
fret-core = { path = "../../crates/fret-core" }
fret-fonts = { path = "../../crates/fret-fonts" }
fret-runtime = { path = "../../crates/fret-runtime" }
fret-launch = { path = "../../crates/fret-launch", features = ["diag-screenshots"] }
fret-ui = { path = "../../crates/fret-ui", features = ["diagnostics"] }
fret-render = { path = "../../crates/fret-render" }
fret-ui-kit = { path = "../../ecosystem/fret-ui-kit" }
fret-ui-assets = { path = "../../ecosystem/fret-ui-assets", features = ["ui", "image-decode", "image-metadata"] }
fret-ui-ai = { path = "../../ecosystem/fret-ui-ai", optional = true }
fret-ui-magic = { path = "../../ecosystem/fret-ui-magic", optional = true, features = ["app-integration"] }
fret-ui-shadcn = { path = "../../ecosystem/fret-ui-shadcn" }
fret-ui-material3 = { path = "../../ecosystem/fret-ui-material3", optional = true }
fret-icons = { path = "../../ecosystem/fret-icons" }
fret-icons-lucide = { path = "../../ecosystem/fret-icons-lucide" }
fret-code-editor-view = { path = "../../ecosystem/fret-code-editor-view", optional = true }
fret-workspace = { path = "../../ecosystem/fret-workspace" }
fret = { path = "../../ecosystem/fret", features = ["router"] }
fret-ui-headless = { path = "../../ecosystem/fret-ui-headless" }
fret-bootstrap = { path = "../../ecosystem/fret-bootstrap", features = ["preload-icon-svgs", "icons-lucide", "icons-ui-semantic-lucide", "diagnostics", "ui-app-driver", "ui-assets"] }
fret-undo = { path = "../../ecosystem/fret-undo" }
fret-query = { path = "../../ecosystem/fret-query", features = ["ui"] }
delinea = { path = "../../ecosystem/delinea", optional = true }
fret-chart = { path = "../../ecosystem/fret-chart", optional = true }
fret-canvas = { path = "../../ecosystem/fret-canvas", optional = true, features = ["ui"] }
time.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
uuid.workspace = true
winit.workspace = true
image.workspace = true
fret-node = { path = "../../ecosystem/fret-node", optional = true, features = ["compat-retained-canvas"] }

[dev-dependencies]
pollster.workspace = true
slotmap.workspace = true
stacksafe.workspace = true
wgpu.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
fret-markdown = { path = "../../ecosystem/fret-markdown", default-features = false, optional = true }
fret-code-view = { path = "../../ecosystem/fret-code-view", optional = true }
fret-code-editor = { path = "../../ecosystem/fret-code-editor", optional = true }
web-sys = { version = "0.3", features = ["Window", "Location", "UrlSearchParams"] }
js-sys = "0.3"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fret-markdown = { path = "../../ecosystem/fret-markdown", default-features = false, optional = true, features = ["syntax-all"] }
fret-code-view = { path = "../../ecosystem/fret-code-view", optional = true, features = ["syntax-rust"] }
fret-code-editor = { path = "../../ecosystem/fret-code-editor", optional = true, features = ["syntax-rust", "syntax-markdown"] }

[lints.rust]
dead_code = "allow"
unused = "allow"
unused_variables = "allow"

[lints.clippy]
all = "allow"
