[package]
name = "fretboard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[dependencies]
serde_json.workspace = true
zip.workspace = true
image.workspace = true
windows-sys.workspace = true
