[package]
name = "fretboard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[dependencies]
fret-diag = { path = "../../crates/fret-diag" }
fret-ui = { path = "../../crates/fret-ui" }
fret-vscode-theme = { path = "../../ecosystem/fret-vscode-theme" }
serde_json.workspace = true
