[package]
name = "fret-a11y-accesskit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
accesskit.workspace = true
fret-core = { path = "../fret-core" }
slotmap.workspace = true

