[package]
name = "fret-a11y-accesskit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "AccessKit accessibility bridge for Fret UI trees."

[dependencies]
accesskit.workspace = true
fret-core = { version = "0.1.0", path = "../fret-core" }
slotmap.workspace = true

