[package]
name = "fret-alloc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[features]
default = []
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
mimalloc = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true, optional = true }

