[package]
name = "fret-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "App-level model, command, and effect surfaces for Fret applications."

[dependencies]
fret-core = { version = "0.1.0", path = "../fret-core" }
fret-runtime = { version = "0.1.0", path = "../fret-runtime" }
slotmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
