[package]
name = "fret-components-shadcn"
version.workspace = true
edition.workspace = true

[dependencies]
fret-core = { path = "../fret-core" }
fret-runtime = { path = "../fret-runtime" }
fret-ui = { path = "../fret-ui" }
fret-ui-widgets = { path = "../fret-ui-widgets" }
fret-components-ui = { path = "../fret-components-ui" }
fret-components-icons = { path = "../fret-components-icons" }
