[package]
name = "fret-components-shadcn"
version.workspace = true
edition.workspace = true

[dependencies]
fret-core = { path = "../fret-core" }
fret-runtime = { path = "../fret-runtime" }
fret-ui = { path = "../fret-ui" }
fret-components-ui = { path = "../fret-components-ui", features = ["icons"] }
fret-components-icons = { path = "../fret-components-icons" }

[dev-dependencies]
fret-app = { path = "../fret-app" }
