[package]
name = "fret-components-shadcn"
version.workspace = true
edition.workspace = true

[features]
default = []
# Heavy, app-specific composites (e.g. data grids / dashboard blocks).
datagrid = []

[dependencies]
fret-core = { path = "../fret-core" }
fret-runtime = { path = "../fret-runtime" }
fret-ui = { path = "../fret-ui" }
fret-components-ui = { package = "fret-ui-kit", path = "../../ecosystem/fret-ui-kit", features = ["icons"] }
fret-components-icons = { path = "../fret-components-icons" }

[dev-dependencies]
fret-app = { path = "../fret-app" }
