[package]
name = "fret-components-ui"
version.workspace = true
edition.workspace = true

[dependencies]
fret-core = { path = "../fret-core" }
fret-runtime = { path = "../fret-runtime" }
fret-ui = { path = "../fret-ui" }
fret-components-icons = { path = "../fret-components-icons" }
tracing.workspace = true
